--- a/sites/configurations/fundingscotland/partials/account/sign-in.hbs
+++ b/sites/configurations/fundingscotland/partials/account/sign-in.hbs
@@ -8,9 +8,9 @@
   });
 </script>
 {{else}}
-<form id="sign-in-form" method="POST" class="sign-in-form">
-  <div class="mdc-card mdc-elevation--z0">
-    <div class="mdc-card__info--fund">
+<form id="sign-in-form" method="POST" class="sign-in-form search-form mdc-elevation--z5">
+  <div class="mdc-card">
+    <!-- <div class="mdc-card__info--fund">
       <div class="mdc-card__info--fund-title mdc-typography--headline4 x-padding">
         {{#if @root.request.params.query.reauth}}
           Reauthenticate
@@ -23,7 +23,7 @@
           Before you can do that you must sign in again
         </div>
       {{/if}}
-    </div>
+    </div> -->
     <div class="mdc-card__info x-padding-full mdc-theme--primary-bg mdc-theme--on-primary" id="sign-in-message">
       <span id="form-message"></span>
     </div>
@@ -34,35 +34,41 @@
         <div class="middle-line-text">
           <span>or</span>
         </div> -->
-        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="text" id="sign-in-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
-          <label class="mdc-floating-label" for="sign-in-email">
-            Email
-          </label>
-          <div class="mdc-line-ripple"></div>
+        <div class="mdc-layout-grid">
+          <div class="mdc-layout-grid__inner">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
+              <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+                <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
+                <input type="text" id="sign-in-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
+                <label class="mdc-floating-label" for="sign-in-email">
+                  Email
+                </label>
+                <div class="mdc-line-ripple"></div>
+              </div>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
+              <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
+                <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
+                <input type="password" id="sign-in-password" class="mdc-text-field__input mdc-text-field--fullwidth" />
+                <label class="mdc-floating-label" for="sign-in-password">
+                  Password
+                </label>
+                <div class="mdc-line-ripple"></div>
+              </div>
+            </div>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone">
+              <div id="form-section-sign-in-buttons">
+                <button class="mdc-button mdc-button--raised" type="submit" id="sign-in-submit">
+                  Sign in
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-          <span class="far fa-key mdc-text-field__icon" tabindex="-1"></span>
-          <input type="password" id="sign-in-password" class="mdc-text-field__input mdc-text-field--fullwidth" />
-          <label class="mdc-floating-label" for="sign-in-password">
-            Password
-          </label>
-          <div class="mdc-line-ripple"></div>
-        </div>
-      </div>
-      <div id="form-section-sign-in-buttons">
-        <button class="mdc-button mdc-button--raised" type="submit" id="sign-in-submit">
-          Sign in
-        </button>
-        <!-- <div class="mdc-typography--body1 v-margin-full">
-          Don't have an account? <a href="/sign-up">Sign up</a>
-        </div> -->
-      </div>
-      <div class="card-loader" id="sign-in-loader">
-        <div class="card-loader-inner">
-          <span class="far fa-2x fa-circle-notch fa-spin"></span>
+        <div class="card-loader" id="sign-in-loader">
+          <div class="card-loader-inner">
+            <span class="far fa-2x fa-circle-notch fa-spin"></span>
+          </div>
         </div>
       </div>
     </div>
