--- a/sites/configurations/fundingscotland/templates/pages/home.hbs
+++ b/sites/configurations/fundingscotland/templates/pages/home.hbs
@@ -2,12 +2,11 @@
   <!-- <div class="banner-search overlay" style="background-image: url('{{#if data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{data.supplimentaryResponses.splash.hits.hits.[0]._source.original_image}}{{/if}}');"> -->
   <div class="banner-search overlay" style="background-image: url('http://cms.scvo.org/wp-content/uploads/2018/03/THEGATHERING-22.02.18_0366.jpg');">
     <div class="content page-content">
-      <!-- <div class="overlay-content">
-      </div> -->
+      <div class="overlay-content">
+        
+      </div>
       {{#if @root.data.auth ~}}
         <form id="search-view" class="search-form mdc-elevation--z5" action="/search" method="GET">
-          <input type="hidden" name="lat" value="">
-          <input type="hidden" name="lng" value="">
           <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
               <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10-desktop mdc-layout-grid__cell--span-7-tablet mdc-layout-grid__cell--span-4-phone">
@@ -35,18 +34,7 @@
           </div>
         </form>
       {{else}}
-        <div class="mdc-layout-grid">
-          <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-              {{> account_sign_in}}
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-              {{> account_sign_up}}
-            </div>
-          </div>
-        </div>
+        {{> account_sign_in}}
       {{/if ~}}
     </div>
   </div>
