--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1101,6 +1101,9 @@ a {
   .mdc-card__info--event-title {
     margin: 0 0 $unit/2;
   }
+  .mdc-card__info--search-distance {
+    margin-right: $unit;
+  }
 }
 .mdc-card.full,
 .mdc-card.list,
