--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1201,6 +1201,14 @@ a {
     cursor: default;
     text-decoration: none;
   }
+  .editor-toolbar,
+  .CodeMirror {
+    border: none;
+    border-bottom: 1px solid $mdc-theme-secondary;
+  }
+  .editor-statusbar {
+    float: right;
+  }
   .text-field-container.user-notes {
     width: 100%;
     .mdc-text-field--fullwidth {
@@ -1306,7 +1314,7 @@ a {
       }
     }
     .save-button-block {
-      margin: 0 $unit $unit;
+      margin: $unit;
     }
   }
 }
@@ -1725,8 +1733,11 @@ body {
     .mdc-card__media {
       margin: 0 auto;
     }
-    .fa-li .fa-fw {
-      color: $mdc-theme-secondary-dark;
+    .fa-li {
+      top: 0;
+      .fa-fw {
+        color: $mdc-theme-secondary-dark;
+      }
     }
   }
   .mdc-card__info--vacancy-row,
