--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -415,7 +415,8 @@ footer h3,
   background-color: $mdc-theme-primary;
 }
 
-.sign-in-form {
+.sign-in-form, 
+.reset-password-form {
   padding: $unit*1.5 0;
   .mdc-card {
     min-height: 40vh;
@@ -452,7 +453,8 @@ footer h3,
     }
   }
   #sign-in-message,
-  #sign-up-message {
+  #sign-up-message,
+  #reset-password-message {
     display: none;
   }
 }
