Made email inputs 'email' fields and not 'text' fields

--- a/sites/configurations/goodmoves/templates/account/sign-in.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-in.hbs
@@ -36,7 +36,7 @@
         </div>
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="text" id="sign-in-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
+          <input type="email" id="sign-in-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
           <label class="mdc-floating-label" for="sign-in-email">
             Email
           </label>
