--- a/sites/configurations/goodmoves/templates/account/reset-password.hbs
+++ b/sites/configurations/goodmoves/templates/account/reset-password.hbs
@@ -25,7 +25,7 @@
       <div class="mdc-typography--body1" id="form-section-email">
         <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
           <span class="far fa-at mdc-text-field__icon" tabindex="-1"></span>
-          <input type="text" id="reset-password-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
+          <input type="email" id="reset-password-email" class="mdc-text-field__input mdc-text-field--fullwidth" />
           <label class="mdc-floating-label" for="sign-in-email">
             Email
           </label>
