Organisation & vacancy filtering improvements (in progress)

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1707,7 +1707,8 @@ body {
 }
 .mdc-card__info--organisation-row {
   .mdc-card__media--organisation {
-    margin: 0;
+    float: right;
+    margin: $unit $unit $unit/2 $unit/2;
   }
 }
 .goodmoves-organisation {
