Organisation layout and query fixes

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -415,7 +415,7 @@ footer h3,
   background-color: $mdc-theme-primary;
 }
 
-.sign-in-form, 
+.sign-in-form,
 .reset-password-form {
   padding: $unit*1.5 0;
   .mdc-card {
@@ -1708,6 +1708,7 @@ body {
   }
 }
 .mdc-card__info--organisation-row {
+  flex: 1 0 auto;
   .mdc-card__media--organisation {
     float: right;
     margin: $unit $unit $unit/2 $unit/2;
