--- a/sites/configurations/goodmoves/partials/organisation/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/organisation/search-result.hbs
@@ -2,7 +2,7 @@
   <div class="mdc-card__info--organisation-row">
     <div class="mdc-card__info--organisation">
       {{#if has_logo ~}}
-      <div class="mdc-card__media mdc-card__media--square mdc-card__media--organisation">
+      <div class="mdc-card__media mdc-card__media--organisation">
         <a href="/organisation/{{slug}}">
           <img src="{{logo_url}}" alt="{{title}}" />
         </a>
