--- a/sites/configurations/digitalparticipation/templates/resources-detail.hbs
+++ b/sites/configurations/digitalparticipation/templates/resources-detail.hbs
@@ -13,7 +13,7 @@
       <h4><a href="http://letsgetonline.scot/help-someone-else/">Let's Get Online</a></h4>
       <p>Find help and computer courses near you in Scotland</p>
 
-      <h4><a href="https://digital.scvo.org.uk/participation/one-digital/">Digital Champions Training</a></h4>
+      <h4><a href="https://scvo.org/digital/participation/champions">Digital Champions Training</a></h4>
       <p>Free local training and support programme for third sector organisations which includes access to the <a href="https://www.digitalchampionsnetwork.com/">Digital Champions Network</a>. To register your interest please get in touch with our team by emailing <a href="mailto:onedigital@scvo.org.uk">onedigital@scvo.org.uk</a>.</p>
 
       <p>If you are not a third sector organisation and you're keen to develop Digital Champions in your organisation, you may wish to apply directly to join the Digital Champions Network with <a href="https://digitalunite.com/">Digital Unite</a>.</p>
