--- a/sites/configurations/goodmoves/partials/event-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/event-search-form.hbs
@@ -1,5 +1,5 @@
 <div class="mdc-drawer__content">
-  <h2 class="mdc-drawer__content-heading hide-sm mdc-drawer--occasional-ie11">Search SCVO training courses</h2>
+  <h2 class="mdc-drawer__content-heading hide-sm mdc-drawer--occasional-ie11">Search SCVO training</h2>
   <form action="/training" method="GET">
     <div class="h-padding">
       <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-drawer--occasional-ie11" data-mdc-auto-init="MDCTextField">
