--- a/sites/configurations/digitalparticipation/templates/privacy.hbs
+++ b/sites/configurations/digitalparticipation/templates/privacy.hbs
@@ -20,7 +20,7 @@
         We use Google Analytics cookies to track how the website is used, but personal data is not recorded and your internet (IP) address is anonymised. <a href="/cookies">Find out more about how we use cookies</a>.
       </p>
       <p>
-        If you complete the declaration sign up form on the website, you are entering into a contract. Your name will be published in the list of signatories, and the contact details you provide will be recorded and stored. Your details may also be shared responsibly with third parties in relation to your status as a signatory.
+        If you complete the declaration sign up form on the website, you are entering into a contract on behalf of your organisation. Your organisation will be included in the list of signatories and the contact details you provide will be recorded and stored. The contact details may also be shared responsibly with third parties in relation to your organisation’s status as a signatory. 
       </p>
       <h4>How to contact us</h4>
       <p>
