Added links to privacy policy page

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1957,6 +1957,9 @@ footer,
   .banner-search.overlay {
     display: block;
     .content {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
       min-height: 40vh;
       background-color: transparent;
       padding: 0 0 $unit*2;
