--- a/sites/configurations/goodmoves/templates/account/sign-up.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-up.hbs
@@ -63,9 +63,12 @@
         <button class="mdc-button mdc-button--raised" type="submit" id="sign-up-submit">
           Sign up
         </button>
-        <div class="mdc-typography--body1 v-margin-full">
+        <p class="mdc-typography--body1 v-margin-full">
           Already have an account? <a href="/sign-in">Sign in</a>
-        </div>
+        </p>
+        <p class="mdc-typography--body1 v-margin-full">
+          Read our <a href="/privacy" target="_blank">privacy notice</a>
+        </p>
       </div>
       <div class="card-loader" id="sign-up-loader">
         <div class="card-loader-inner">
