--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -387,7 +387,7 @@ footer h3,
     .mdc-button {
       position: relative;
       display: block;
-      margin-bottom: $unit/2;
+      margin-bottom: 0;
       width: 100%;
       color: white;
       width: 100%;
@@ -413,11 +413,11 @@ footer h3,
 }
 .sign-up-form {
   padding: $unit*1.5 0 !important;
+  margin: $unit*2 auto;
   .mdc-card {
     max-width: 500px;
-    margin: 0 auto;
     position: relative;
-    background-color: rgba(255, 255, 255, 0.6);
+    // background-color: rgba(255, 255, 255, 0.6);
     .mdc-text-field {
       margin: 0 0 $unit;
     }
@@ -1432,6 +1432,9 @@ footer,
     display: block;
     .content {
       background-image: linear-gradient(60deg, rgba(0, 121, 106, 0.89), rgba(0, 121, 106, 0.91) 47%, transparent 47.08%, transparent);
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
       min-height: 40vh;
       background-color: transparent;
       // padding: 0 0 $unit*2;
