--- a/assets/css/fundingscotland-styles.scss
+++ b/assets/css/fundingscotland-styles.scss
@@ -1770,6 +1770,11 @@ footer {
 .text-justify { text-align: justify; }
 .pull-right { float: right; }
 
+.align-centre {
+  display: flex;
+  justify-content: center !important;
+  align-items: center;
+}
 .v-padding {
   padding-top: $unit/2;
   padding-bottom: $unit/2;
@@ -1778,7 +1783,6 @@ footer {
   padding-top: $unit;
   padding-bottom: $unit;
 }
-
 .h-padding {
   padding-left: $unit/2;
   padding-right: $unit/2;
@@ -1787,19 +1791,20 @@ footer {
   padding-left: $unit;
   padding-right: $unit;
 }
-
 .x-padding {
   padding: $unit/2;
 }
 .x-padding-full {
   padding: $unit;
 }
-
 .t-padding { padding-top: $unit/2; }
 .b-padding { padding-bottom: $unit/2; }
 .l-padding { padding-left: $unit/2; }
 .r-padding { padding-right: $unit/2; }
-
+.t-padding-full { padding-top: $unit; }
+.b-padding-full { padding-bottom: $unit; }
+.l-padding-full { padding-left: $unit; }
+.r-padding-full { padding-right: $unit; }
 .v-margin {
   margin-top: $unit/2;
   margin-bottom: $unit/2;
@@ -1808,7 +1813,9 @@ footer {
   margin-top: $unit;
   margin-bottom: $unit;
 }
-
+.v-margin-full-bottom {
+  margin-bottom: $unit;
+}
 .h-margin {
   margin-left: $unit/2;
   margin-right: $unit/2;
@@ -1817,11 +1824,17 @@ footer {
   margin-left: $unit;
   margin-right: $unit;
 }
-
 .t-margin { margin-top: $unit/2; }
 .b-margin { margin-bottom: $unit/2; }
 .l-margin { margin-left: $unit/2; }
 .r-margin { margin-right: $unit/2; }
+.t-margin-full { margin-top: $unit; }
+.b-margin-full { margin-bottom: $unit; }
+.l-margin-full { margin-left: $unit; }
+.r-margin-full { margin-right: $unit; }
+
+.cursor-pointer { cursor: pointer; }
+.cursor-arrow { cursor: default; }
 
 .mdc-select--box {
   margin-top: 16px;
