--- a/sites/configurations/fundingscotland/partials/account/sign-in.hbs
+++ b/sites/configurations/fundingscotland/partials/account/sign-in.hbs
@@ -62,9 +62,9 @@
                   Sign in
                 </button>
               </div>
-              <p class="mdc-typography--body1 v-margin-full">
+              <div class="mdc-typography--body1 v-margin-full">
                 Read our <a href="/privacy" target="_blank">privacy notice</a>
-              </p>
+              </div>
             </div>
           </div>
         </div>
