--- a/sites/configurations/fundingscotland/partials/account/sign-up.hbs
+++ b/sites/configurations/fundingscotland/partials/account/sign-up.hbs
@@ -66,9 +66,9 @@
         <!-- <div class="mdc-typography--body1 v-margin-full">
           Already have an account? <a href="/sign-in">Sign in</a>
         </div> -->
-        <p class="mdc-typography--body1 v-margin-full">
+        <div class="mdc-typography--body1 v-margin-full">
           Read our <a href="/privacy" target="_blank">privacy notice</a>
-        </p>
+        </div>
       </div>
       <div class="card-loader" id="sign-up-loader">
         <div class="card-loader-inner">
