--- a/sites/configurations/goodmoves/templates/account/sign-in.hbs
+++ b/sites/configurations/goodmoves/templates/account/sign-in.hbs
@@ -56,12 +56,12 @@
         <button class="mdc-button mdc-button--raised" type="submit" id="sign-in-submit">
           Sign in
         </button>
-        <p class="mdc-typography--body1 v-margin-full">
+        <div class="mdc-typography--body1 v-margin-full">
           Don't have an account? <a href="/sign-up">Sign up</a>
-        </p>
-        <p class="mdc-typography--body1 v-margin-full">
+        </div>
+        <div class="mdc-typography--body1 v-margin-full">
           Read our <a href="/privacy" target="_blank">privacy notice</a>
-        </p>
+        </div>
       </div>
       <div class="card-loader" id="sign-in-loader">
         <div class="card-loader-inner">
