--- a/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-form.hbs
@@ -49,14 +49,14 @@
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
               <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon" data-mdc-auto-init="MDCTextField">
-                <span class="far fa-map-marker-alt mdc-text-field__icon" tabindex="0" role="button"></span>
+                <span class="far fa-map-marker-alt mdc-text-field__icon geo-lookup" tabindex="0" title="Find my location" role="button" style="pointer-events: initial !important;"></span>
                 <input type="text" id="{{instance_id}}-location" name="location" class="mdc-text-field__input mdc-text-field--fullwidth search-location" value="{{@root.request.params.query.location}}" placeholder="" data-lpignore="true" data-location-options='
                   {
                     "types": ["(regions)"],
                     "componentRestrictions": {
                       "country": "gb"
                     }
-                  }' data-location-lat="[name='lat']" data-location-lng="[name='lng']">
+                  }' data-location-lat="[name='lat']" data-location-lng="[name='lng']" data-location-services=".geo-lookup">
                 <label class="mdc-floating-label" for="{{instance_id}}-location">
                   Location
                 </label>
