Added text button under location box for 'Find me'. May need styling

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2720,6 +2720,14 @@ form.inline-form {
   }
 }
 
+.after-textfield-action {
+  float: right;
+  margin-top: -10px;
+  font-size: 0.8rem;
+  color: $mdc-theme-primary-dark;
+  text-decoration: underline;
+  cursor: pointer;
+}
 /*
 body.map {
 header#top-bar, footer.mdc-layout__footer {
