--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -51,6 +51,7 @@
                 </label>
                 <div class="mdc-line-ripple"></div>
               </div>
+              <div class="after-textfield-action geo-lookup">Find me</div>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
               <div class="mdc-form-field">
