--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -29,7 +29,7 @@
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-5-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
               <div class="mdc-text-field mdc-text-field--box mdc-text-field--with-leading-icon mdc-text-field-tt" data-mdc-auto-init="MDCTextField">
                 <span class="far fa-search mdc-text-field__icon" tabindex="0" role="button"></span>
-                <input type="text" id="what-jobs" name="keywords" class="mdc-text-field__input">
+                <input type="text" id="what-jobs" name="keywords" class="mdc-text-field__input" placeholder="" data-lpignore="true">
                 <label for="what-jobs" class="mdc-floating-label">
                   Keywords
                 </label>
@@ -51,7 +51,7 @@
                 </label>
                 <div class="mdc-line-ripple"></div>
               </div>
-              <div class="after-textfield-action geo-lookup">Find me</div>
+              <!-- <div class="after-textfield-action geo-lookup">Find me</div> -->
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone">
               <div class="mdc-form-field">
