--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1014,6 +1014,7 @@ a {
   }
   .mdc-card__media--organisation {
     // margin-right: $unit;
+    z-index: 3;
   }
   .search-result-article__snippet,
   .search-result-article__notes {
@@ -1092,9 +1093,25 @@ a {
   }
 }
 
-.mdc-card.gist.tfn-post,
-.mdc-card.gist.tfn-feature {
+.gist.tfn-post {
   background-color: transparent;
+  background-size: cover;
+  display: flex;
+  .mdc-card {
+    background: -moz-linear-gradient(top, rgba(0,0,0,0.57) 0%, rgba(0,0,0,0.38) 100%);
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0.57) 0%,rgba(0,0,0,0.38) 100%);
+    background: linear-gradient(to bottom, rgba(0,0,0,0.57) 0%,rgba(0,0,0,0.38) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#82000000', endColorstr='#57000000',GradientType=0 );
+    padding: $unit;
+    .mdc-card__title,
+    .mdc-card__subtitle,
+    a {
+      color: white !important;
+    }
+    .post-info .post-info-item:last-child {
+      margin-bottom: 0 !important;
+    }
+  }
 }
 .mdc-card.search-result {
   .mdc-card__info--event {
