--- a/sites/configurations/goodmoves/templates/organisations/organisation.hbs
+++ b/sites/configurations/goodmoves/templates/organisations/organisation.hbs
@@ -45,8 +45,8 @@
     Find out more about <a href="https://goodhq.org/{{goodhq_organisation.xid}}">{{{organisation.title}}}</a> on <a href="https://goodhq.org">Good HQ</a>
   </div>
   {{#compare @root.data.goodhq.volunteering.hits.total ">" 0 ~}}
-  <p class="mdc-typography--body1">
-    <strong>Volunteering opportunities</strong>
+  <p class="mdc-typography--headline7">
+    <strong>Volunteering</strong>
   </p>
   <div class="mdc-layout-grid equal-height">
     <div class="mdc-layout-grid__inner">
@@ -59,7 +59,7 @@
   </div>
   {{#compare @root.data.goodhq.volunteering.hits.total ">" 3 ~}}
   <p class="mdc-typography--body1">
-    <a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}?mode=volopp">Find more on Good HQ</a>
+    <a href="https://goodhq.org/{{organisation.goodhq_organisation.xid}}?mode=volopp">More volunteering opportunities on Good HQ</a>
   </p>
   {{/compare ~}}
   {{/compare ~}}
