--- a/sites/configurations/goodmoves/partials/tfn-latest.hbs
+++ b/sites/configurations/goodmoves/partials/tfn-latest.hbs
@@ -4,11 +4,26 @@
       <div class="mdc-typography--headline5 v-margin-full">
         Latest articles on <a href="http://thirdforcenews.org.uk?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Third Force News</a>
       </div>
-      <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid equal-height">
         <div class="mdc-layout-grid__inner">
           {{#each @root.data.posts.tfn_latest.hits.hits ~}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-            {{{_source.rendered.scvo_gist}}}
+            {{#with _source ~}}
+            <div class="gist tfn-post {{../_type}}" style="background-image: url({{image_wide}});">
+              <div class="mdc-card">
+                <h3 class="mdc-card__title mdc-typography--headline">
+                  <a href="{{url}}">{{{title}}}</a>
+                </h3>
+                <h4 class="mdc-card__subtitle post-info">
+                  <div class="post-info-item post-info-date">
+                    <span class="far fa-calendar-edit" aria-hidden="true"></span>
+                    {{{momentFormat (moment date_published "x") "Do MMMM YYYY"}}}
+                  </div>
+                </h4>
+              </div>
+            </div>
+            {{/with ~}}
+            <!-- {{{_source.rendered.scvo_gist}}} -->
           </div>
           {{/each ~}}
         </div>
