--- a/sites/configurations/goodmoves/partials/tfn-latest.hbs
+++ b/sites/configurations/goodmoves/partials/tfn-latest.hbs
@@ -9,7 +9,7 @@
           {{#each @root.data.posts.tfn_latest.hits.hits ~}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
             {{#with _source ~}}
-            <div class="gist tfn-post {{../_type}}" style="background-image: url({{image_wide}});">
+            <div class="gist tfn-post {{../_type}}" style="background-image: url({{image_feature}});">
               <div class="mdc-card">
                 <h3 class="mdc-card__title mdc-typography--headline">
                   <a href="{{url}}">{{{title}}}</a>
@@ -23,7 +23,6 @@
               </div>
             </div>
             {{/with ~}}
-            <!-- {{{_source.rendered.scvo_gist}}} -->
           </div>
           {{/each ~}}
         </div>
