--- a/sites/configurations/goodmoves/partials/tfn-related.hbs
+++ b/sites/configurations/goodmoves/partials/tfn-related.hbs
@@ -4,12 +4,12 @@
       <div class="mdc-typography--headline5 v-margin-full">
         Related articles on <a href="http://thirdforcenews.org.uk?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Third Force News</a>
       </div>
-      <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid equal-height">
         <div class="mdc-layout-grid__inner">
           {{#each @root.data.posts.tfn_related.hits.hits ~}}
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
             {{#with _source ~}}
-            <div class="gist tfn-post {{../_type}}" style="background-image: url({{image_wide}});">
+            <div class="gist tfn-post {{../_type}}" style="background-image: url({{image_feature}});">
               <div class="mdc-card">
                 <h3 class="mdc-card__title mdc-typography--headline">
                   <a href="{{url}}">{{{title}}}</a>
