--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1098,9 +1098,9 @@ a {
   background-size: cover;
   display: flex;
   .mdc-card {
-    background: -moz-linear-gradient(top, rgba(0,0,0,0.57) 0%, rgba(0,0,0,0.38) 100%);
-    background: -webkit-linear-gradient(top, rgba(0,0,0,0.57) 0%,rgba(0,0,0,0.38) 100%);
-    background: linear-gradient(to bottom, rgba(0,0,0,0.57) 0%,rgba(0,0,0,0.38) 100%);
+    background: -moz-linear-gradient(top, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.4) 100%);
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.4) 100%);
+    background: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.4) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#82000000', endColorstr='#57000000',GradientType=0 );
     padding: $unit;
     .mdc-card__title,
@@ -1108,6 +1108,7 @@ a {
     a {
       color: white !important;
     }
+    .mdc-card__subtitle,
     .post-info .post-info-item:last-child {
       margin-bottom: 0 !important;
     }
