More TFN styling

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1097,7 +1097,9 @@ a {
   background-color: transparent;
   background-size: cover;
   display: flex;
+  width: 100%;
   .mdc-card {
+    flex: 1;
     background: -moz-linear-gradient(top, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.4) 100%);
     background: -webkit-linear-gradient(top, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.4) 100%);
     background: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.4) 100%);
