--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -552,7 +552,7 @@ footer h3,
         border-color: $mdc-theme-primary !important;
       }
       .mdc-radio__inner-circle {
-        background-color: $mdc-theme-primary !important;
+        border-color: $mdc-theme-primary !important;
       }
     }
   }
@@ -1100,9 +1100,9 @@ a {
   width: 100%;
   .mdc-card {
     flex: 1;
-    background: -moz-linear-gradient(top, rgba(0,0,0,0.6) 0%, rgba(0,0,0,0.4) 100%);
-    background: -webkit-linear-gradient(top, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.4) 100%);
-    background: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%,rgba(0,0,0,0.4) 100%);
+    background: -moz-linear-gradient(top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.55) 100%);
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.55) 100%);
+    background: linear-gradient(to bottom, rgba(0,0,0,0.7) 0%,rgba(0,0,0,0.55) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#82000000', endColorstr='#57000000',GradientType=0 );
     padding: $unit;
     .mdc-card__title,
