--- a/sites/configurations/goodmoves/partials/tfn-related.hbs
+++ b/sites/configurations/goodmoves/partials/tfn-related.hbs
@@ -2,7 +2,7 @@
   <div class="mdc-layout-grid__inner">
     <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
       <div class="mdc-typography--headline5 v-margin-full">
-        Related articles on <a href="http://thirdforcenews.org.uk?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Third Force News</a>
+        Related articles on <a href="https://thirdforcenews.org.uk?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Third Force News</a>
       </div>
       <div class="mdc-layout-grid equal-height">
         <div class="mdc-layout-grid__inner">
@@ -10,9 +10,9 @@
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
             {{#with _source ~}}
             <div class="gist tfn-post {{../_type}}" style="background-image: url({{image_feature}});">
-              <div class="mdc-card">
+              <a href="{{url}}" title="{{title}}" class="mdc-card">
                 <h3 class="mdc-card__title mdc-typography--headline">
-                  <a href="{{url}}">{{{title}}}</a>
+                  {{{title}}}
                 </h3>
                 <h4 class="mdc-card__subtitle post-info">
                   <div class="post-info-item post-info-date">
@@ -20,7 +20,7 @@
                     {{{momentFormat (moment date_published "x") "Do MMMM YYYY"}}}
                   </div>
                 </h4>
-              </div>
+              </a>
             </div>
             {{/with ~}}
           </div>
@@ -28,7 +28,7 @@
         </div>
       </div>
       <p class="mdc-typography--body1">
-        <a href="http://thirdforcenews.org.uk/tfn-news?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Read all the latest news from TFN</a>&emsp;<a href="http://thirdforcenews.org.uk/signup?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Subscribe to TFN</a>
+        <a href="https://thirdforcenews.org.uk/tfn-news?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Read all the latest news from TFN</a>&emsp;<a href="https://thirdforcenews.org.uk/signup?utm_source=Widget&utm_medium=Widget&utm_campaign=Widget-Traffic">Subscribe to TFN</a>
       </p>
     </div>
   </div>
