--- a/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy-search-results.hbs
@@ -44,11 +44,11 @@
   {{~/if}}
   {{~#if location~}} near {{location}} {{/if~}}
   {{~#if salary_min~}}
-    {{~#if salary_max}} between {{salary_currency}}{{addCommas salary_min}} and {{salary_currency}}{{addCommas salary_max}}
-    {{~else}} over {{salary_currency}}{{addCommas salary_min}}
+    {{~#if salary_max}} between &pound;{{addCommas salary_min}} and &pound;{{addCommas salary_max}}
+    {{~else}} over &pound;{{addCommas salary_min}}
     {{~/if~}}
   {{~else~}}
-    {{~#if salary_max}} up to {{salary_currency}}{{addCommas salary_max}}
+    {{~#if salary_max}} up to &pound;{{addCommas salary_max}}
     {{~/if}}
   {{~/if~}}
 {{~/with~}}">
