--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1115,6 +1115,9 @@ a {
       margin-bottom: 0 !important;
     }
   }
+  .mdc-card.no-image {
+    background: black;
+  }
 }
 .mdc-card.search-result {
   .mdc-card__info--event {
@@ -1980,8 +1983,13 @@ footer,
       .search-form {
         background-color: rgba(255, 255, 255, 0.6);
         width: 100%;
-        padding: 0 $unit $unit/2;
+        padding: $unit $unit $unit/2;
         box-sizing: border-box;
+        .mdc-text-field,
+        .mdc-select,
+        .mdc-button {
+          margin-top: 0;
+        }
       }
     }
   }
@@ -2044,6 +2052,9 @@ footer,
           }
         }
       }
+      .search-content {
+        padding: 0 $unit;
+      }
       .overlay-content {
         padding: $unit*2.5 $unit $unit*2 3%;
         .header-extra,
@@ -2066,6 +2077,9 @@ footer,
           .normal.moves {
             margin-left: -0.2rem;
           }
+        }
+        .header-extra {
+          max-width: 45%;
         }
       }
     }
@@ -2098,6 +2112,20 @@ footer,
       }
     }
   }
+  .home-banner .banner-search.overlay .content {
+    .overlay-content {
+      padding: $unit;
+      .header-text {
+        font-size: 3.5rem;
+        line-height: 3.5rem;
+        padding: 0 0 $unit/2;
+        .normal {
+          letter-spacing: -0.3rem;
+        }
+      }
+    }
+  }
+
 }
 @media screen and (max-width: $mobile-breakpoint) {
   .scroll-icon,
@@ -2127,9 +2155,13 @@ footer,
         }
       }
       .header-extra {
+        max-width: 100%;
         font-size: 1.1rem;
         padding: $unit/4 0;
       }
+    }
+    .search-content {
+      padding: 0;
     }
   }
   .mdc-card.full,
@@ -2164,7 +2196,7 @@ footer,
     margin-right: $unit/2;
   }
   #search-view {
-    padding-top: $unit;
+    padding: $unit;
     .mdc-text-field,
     .mdc-select {
       margin: 0;
@@ -2242,7 +2274,7 @@ footer,
     }
   }
   .page-content {
-    padding: 0;
+    padding: 0 0 $unit;
   }
 }
 
@@ -2460,6 +2492,11 @@ footer.mdc-layout__footer {
   .container-content.container-map {
     margin: 0;
   }
+  .home-browse {
+    .mdc-layout-grid__inner {
+      grid-gap: 24px;
+    }
+  }
   footer.mdc-layout__footer h3 {
     font-size: $unit;
     padding: $unit/4 0;
@@ -2481,6 +2518,11 @@ footer.mdc-layout__footer {
 @media screen and (max-width: $mobile-breakpoint) {
   .mdc-top-app-bar__title svg {
     zoom: 0.9;
+  }
+  .home-browse {
+    .mdc-typography--body2 {
+      display: none;
+    }
   }
   footer.mdc-layout__footer p,
   footer.mdc-layout__footer li,
