--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -2067,8 +2067,8 @@ footer,
         }
         .header-text {
           padding: 0 0 $unit*1.5;
-          font-size: 4rem;
-          line-height: 4rem;
+          font-size: 4.5rem;
+          line-height: 4.5rem;
           letter-spacing: -0.3rem;
           .normal {
             letter-spacing: -0.4rem;
@@ -2081,6 +2081,16 @@ footer,
         .header-extra {
           max-width: 45%;
         }
+      }
+    }
+  }
+}
+@media screen and (max-width: $desktop-landscape-breakpoint) {
+  .home-banner .banner-search.overlay .content {
+    .overlay-content {
+      .header-text {
+        font-size: 4rem;
+        line-height: 4rem;
       }
     }
   }
