--- a/sites/configurations/goodmoves/partials/organisation/full.hbs
+++ b/sites/configurations/goodmoves/partials/organisation/full.hbs
@@ -1,6 +1,11 @@
 <div class="mdc-card full" data-organisation-id="{{Id}}">
   <div class="mdc-card__info--organisation-row">
     <div class="mdc-card__info--organisation">
+      {{#if has_logo ~}}
+      <div class="mdc-card__media mdc-card__media--organisation">
+        <img src="{{logo_url}}" alt="{{title}}" />
+      </div>
+      {{/if ~}}
       <div class="mdc-card__info--organisation-title mdc-typography--headline3">
         {{{title}}}
       </div>
@@ -78,10 +83,5 @@
         </ul>
       </div>
     </div>
-    {{#if has_logo ~}}
-    <div class="mdc-card__media mdc-card__media--square mdc-card__media--organisation">
-      <img src="{{logo_url}}" alt="{{title}}" />
-    </div>
-    {{/if ~}}
   </div>
 </div>
